# ai-news-agent

./: .env.example  .gitignore  CLAUDE.md  GIT_CHECK.md  digest.py  pyproject.toml  requirements.txt
src/news_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  models.py  output.py  prompts.py
src/news_agent/delivery/: __init__.py  base.py  file_sink.py
src/news_agent/linkedin/: __init__.py  poster.py
tests/: test_cli.py  test_config.py  test_delivery.py  test_output.py
